# quadraui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SESSION_HISTORY.md
.claude/commands/: plan-next.md
.github/workflows/: ci.yml
kubeui/: Cargo.toml
kubeui-core/: Cargo.toml
kubeui-core/src/: view.rs
kubeui-gtk/: Cargo.toml
kubeui-gtk/src/: main.rs
kubeui/src/: main.rs
quadraui/: CLAUDE.md  Cargo.toml  README.md
quadraui/docs/: ARCHITECTURE.md  CONSUMER_PATTERNS.md  LESSONS.md  PRIMITIVE_RULES.md  SESSION_HISTORY.md  TESTING.md  TUI_CONSUMER_TOUR.md
quadraui/examples/: gtk_appshell_demo.rs  gtk_chart.rs  gtk_chat.rs  gtk_data_table.rs  gtk_folder_picker.rs  gtk_form_groups.rs  gtk_form_scroll.rs  gtk_frame_demo.rs  gtk_full_chrome_demo.rs  gtk_hscroll.rs  gtk_indicators.rs  gtk_markdown.rs  gtk_menu_bar.rs  gtk_multi_tree.rs  gtk_panel.rs  gtk_pipeline.rs  gtk_search_panel.rs  gtk_shell.rs  gtk_sidebar_panel.rs  gtk_sidebar_search.rs  gtk_split.rs  gtk_text_input.rs  gtk_toast.rs  gtk_toolbar.rs  macos_app.rs  macos_chart.rs  macos_data_table.rs  macos_demo.rs  macos_form_groups.rs  macos_hscroll.rs  macos_indicators.rs  macos_menu_bar.rs  macos_multi_tree.rs  macos_native_menu.rs  macos_panel.rs  macos_right_click_demo.rs  macos_search_panel.rs  macos_sidebar_search.rs  macos_split.rs  macos_toast.rs  (+25 more)
quadraui/examples/common/: appshell_demo.rs  chart_app.rs  chat_demo.rs  data_table_app.rs  demo.rs  folder_picker_app.rs  form_groups.rs  form_scroll.rs  frame_demo.rs  full_chrome_demo.rs  hscroll_editor.rs  indicators_app.rs  markdown_demo.rs  menu_bar_app.rs  mini_app.rs  mod.rs  multi_tree.rs  native_menu.rs  panel_app.rs  pipeline_app.rs  right_click_demo.rs  search_panel.rs  shell_app.rs  sidebar_panel_app.rs  sidebar_search.rs  split_app.rs  text_input_demo.rs  toast_app.rs  toolbar_app.rs
quadraui/src/: backend.rs  dispatch.rs  event.rs  frame.rs  lib.rs  runner.rs  shell.rs  theme.rs  types.rs
quadraui/src/compose/: app_shell.rs  chat_controller.rs  focus_group.rs  focus_ring.rs  folder_picker.rs  form_controller.rs  markdown.rs  menu_system.rs  mod.rs  sidebar_system.rs  status_bar_interaction.rs  toolbar_hover_tracker.rs  tree_controller.rs
quadraui/src/gtk/: activity_bar.rs  backend.rs  chart.rs  command_center.rs  command_line.rs  context_menu.rs  data_table.rs  dialog.rs  drop_overlay.rs  editor.rs  events.rs  form.rs  list.rs  menu_bar.rs  menu_overlay.rs  mod.rs  multi_section_view.rs  palette.rs  panel.rs  pipeline_view.rs  progress.rs  rich_text_popup.rs  run.rs  services.rs  shell_runner.rs  sidebar_panel.rs  spinner.rs  split.rs  status_bar.rs  tab_bar.rs  terminal.rs  text_display.rs  text_input.rs  toast.rs  toolbar.rs  tree.rs
quadraui/src/macos/: activity_bar.rs  backend.rs  caret_blink.rs  chart.rs  command_center.rs  completions.rs  context_menu.rs  data_table.rs  dialog.rs  editor.rs  events.rs  find_replace.rs  form.rs  headless.rs  list.rs  menu_bar.rs  menu_bar_install.rs  message_list.rs  mod.rs  multi_section_view.rs  palette.rs  panel.rs  pipeline_view.rs  progress.rs  rich_text_popup.rs  run.rs  scrollbar.rs  services.rs  sidebar_panel.rs  spinner.rs  split.rs  status_bar.rs  tab_bar.rs  terminal.rs  text.rs  text_display.rs  toast.rs  toolbar.rs  tooltip.rs  tree.rs
quadraui/src/primitives/: chart.rs  command_center.rs  command_line.rs  context_menu.rs  data_table.rs  dialog.rs  drop_zone.rs  editor.rs  form.rs  list.rs  menu_bar.rs  mod.rs  multi_section_view.rs  palette.rs  pipeline_view.rs  sidebar_panel.rs  tab_bar.rs  terminal.rs  text_display.rs  text_input.rs  toolbar.rs  tree.rs
quadraui/src/tui/: activity_bar.rs  backend.rs  chart.rs  command_center.rs  command_line.rs  context_menu.rs  data_table.rs  dialog.rs  drop_overlay.rs  editor.rs  events.rs  form.rs  list.rs  menu_bar.rs  mod.rs  multi_section_view.rs  palette.rs  panel.rs  pipeline_view.rs  progress.rs  run.rs  services.rs  shell_runner.rs  sidebar_panel.rs  spinner.rs  split.rs  status_bar.rs  tab_bar.rs  terminal.rs  text_display.rs  text_input.rs  toast.rs  toolbar.rs  tree.rs
quadraui/src/win/: backend.rs  mod.rs  run.rs  services.rs
