[package]
name = "kubeui"
version = "0.0.1"
edition.workspace = true
description = "TUI Kubernetes dashboard built on quadraui (kubeui-core consumer)"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "kubeui"
path = "src/main.rs"

[dependencies]
quadraui = { path = "../quadraui", features = ["tui"] }
kubeui-core = { path = "../kubeui-core" }

# Async runtime — owned here so the reducer's k8s `block_on` calls
# happen on this binary's runtime.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync"] }

anyhow = "1.0"

# TUI backend
ratatui = "0.30"
crossterm = "0.29"
