[package]
name = "quadraui"
version = "0.0.1"
edition.workspace = true
description = "Cross-platform UI primitives with native Windows, Linux, macOS, and TUI rendering backends"
license.workspace = true
repository.workspace = true
publish = false

[lib]

[features]
# Public TUI rasterisers in `quadraui::tui`. Pulls in ratatui.
tui = ["dep:ratatui", "dep:arboard", "dep:unicode-width"]

# Public GTK rasterisers in `quadraui::gtk`. Pulls in gtk4 + pangocairo.
gtk = ["dep:gtk4", "dep:pangocairo", "dep:arboard"]

# Public Win-GUI rasterisers in `quadraui::win`. No deps yet — the
# feature gate exists so the module compiles and the Backend impl is
# exercised by `cargo check --features win`. Actual Direct2D /
# DirectWrite deps (via `windows-rs`) land when #19 ships.
win = []

# Legacy alias kept so `cargo run --example gtk_demo --features gtk-example`
# keeps working as a deprecated spelling. Prefer `--features gtk` going
# forward — both gtk_demo and gtk_app now go through `quadraui::gtk::run`.
gtk-example = ["gtk"]

# Public macOS rasterisers in `quadraui::macos` (AppKit + Core Graphics + Core Text).
# The objc2-family deps are platform-gated below so this flag is a no-op on
# non-macOS hosts — `cargo check --features macos` still type-checks on Linux/CI.
macos = [
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:core-graphics",
    "dep:core-text",
    "dep:core-foundation",
    "dep:arboard",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Optional — pulled in by the `gtk` / `gtk-example` features.
gtk4 = { version = "0.7", features = ["v4_10"], optional = true }
pangocairo = { version = "0.18", optional = true }
# Optional — pulled in by the `tui` feature.
ratatui = { version = "0.29", optional = true }
unicode-width = { version = "0.2", optional = true }
# Optional — pulled in by `tui` and `gtk` for system clipboard access.
arboard = { version = "3", optional = true }

# macOS-only optional deps. Gated on `target_os = "macos"` so the `macos`
# feature is a no-op on other platforms — keeps cross-platform CI green.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", optional = true }
objc2-app-kit = { version = "0.2", optional = true, features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSRunningApplication",
    "NSGraphicsContext",
    "NSGraphics",
    "NSColor",
    "NSEvent",
    "NSCell",
    "NSMenu",
    "NSMenuItem",
    "NSOpenPanel",
    "NSPanel",
    "NSSavePanel",
] }
objc2-foundation = { version = "0.2", optional = true, features = [
    "NSArray",
    "NSDate",
    "NSGeometry",
    "NSObject",
    "NSProcessInfo",
    "NSString",
    "NSThread",
    "NSTimer",
    "NSURL",
] }
core-graphics = { version = "0.23", optional = true }
core-text = { version = "20.1", optional = true }
core-foundation = { version = "0.9", optional = true }

[dev-dependencies]
serde_json = "1.0"
# For runnable examples that demonstrate the TUI backend pattern.
crossterm = "0.29"
# For isolated temp-directory creation in compose-controller tests
# that touch the filesystem.
tempfile = "3"

[[example]]
name = "tui_demo"
path = "examples/tui_demo.rs"
required-features = ["tui"]

[[example]]
name = "tui_app"
path = "examples/tui_app.rs"
required-features = ["tui"]

[[example]]
name = "msv_multi_tree"
path = "examples/msv_multi_tree.rs"
required-features = ["tui"]

[[example]]
name = "msv_sc_panel"
path = "examples/msv_sc_panel.rs"
required-features = ["tui"]

[[example]]
name = "gtk_demo"
path = "examples/gtk_demo.rs"
required-features = ["gtk"]

[[example]]
name = "gtk_app"
path = "examples/gtk_app.rs"
required-features = ["gtk"]

[[example]]
name = "gtk_multi_tree"
path = "examples/gtk_multi_tree.rs"
required-features = ["gtk"]

[[example]]
name = "tui_panel"
path = "examples/tui_panel.rs"
required-features = ["tui"]

[[example]]
name = "gtk_panel"
path = "examples/gtk_panel.rs"
required-features = ["gtk"]

[[example]]
name = "tui_toast"
path = "examples/tui_toast.rs"
required-features = ["tui"]

[[example]]
name = "gtk_toast"
path = "examples/gtk_toast.rs"
required-features = ["gtk"]

[[example]]
name = "tui_indicators"
path = "examples/tui_indicators.rs"
required-features = ["tui"]

[[example]]
name = "gtk_indicators"
path = "examples/gtk_indicators.rs"
required-features = ["gtk"]

[[example]]
name = "tui_search_panel"
path = "examples/tui_search_panel.rs"
required-features = ["tui"]

[[example]]
name = "gtk_search_panel"
path = "examples/gtk_search_panel.rs"
required-features = ["gtk"]

[[example]]
name = "tui_sidebar_search"
path = "examples/tui_sidebar_search.rs"
required-features = ["tui"]

[[example]]
name = "gtk_sidebar_search"
path = "examples/gtk_sidebar_search.rs"
required-features = ["gtk"]

[[example]]
name = "tui_form_groups"
path = "examples/tui_form_groups.rs"
required-features = ["tui"]

[[example]]
name = "gtk_form_groups"
path = "examples/gtk_form_groups.rs"
required-features = ["gtk"]

[[example]]
name = "tui_chart"
path = "examples/tui_chart.rs"
required-features = ["tui"]

[[example]]
name = "gtk_chart"
path = "examples/gtk_chart.rs"
required-features = ["gtk"]

[[example]]
name = "macos_app"
path = "examples/macos_app.rs"
required-features = ["macos"]

[[example]]
name = "macos_demo"
path = "examples/macos_demo.rs"
required-features = ["macos"]

[[example]]
name = "macos_data_table"
path = "examples/macos_data_table.rs"
required-features = ["macos"]

[[example]]
name = "macos_chart"
path = "examples/macos_chart.rs"
required-features = ["macos"]

[[example]]
name = "macos_form_groups"
path = "examples/macos_form_groups.rs"
required-features = ["macos"]

[[example]]
name = "macos_multi_tree"
path = "examples/macos_multi_tree.rs"
required-features = ["macos"]

[[example]]
name = "macos_split"
path = "examples/macos_split.rs"
required-features = ["macos"]

[[example]]
name = "macos_panel"
path = "examples/macos_panel.rs"
required-features = ["macos"]

[[example]]
name = "macos_toast"
path = "examples/macos_toast.rs"
required-features = ["macos"]

[[example]]
name = "macos_indicators"
path = "examples/macos_indicators.rs"
required-features = ["macos"]

[[example]]
name = "tui_data_table"
path = "examples/tui_data_table.rs"
required-features = ["tui"]

[[example]]
name = "gtk_data_table"
path = "examples/gtk_data_table.rs"
required-features = ["gtk"]

[[example]]
name = "tui_form_scroll"
path = "examples/tui_form_scroll.rs"
required-features = ["tui"]

[[example]]
name = "gtk_form_scroll"
path = "examples/gtk_form_scroll.rs"
required-features = ["gtk"]

[[example]]
name = "tui_folder_picker"
path = "examples/tui_folder_picker.rs"
required-features = ["tui"]

[[example]]
name = "gtk_folder_picker"
path = "examples/gtk_folder_picker.rs"
required-features = ["gtk"]

[[example]]
name = "tui_hscroll"
path = "examples/tui_hscroll.rs"
required-features = ["tui"]

[[example]]
name = "gtk_hscroll"
path = "examples/gtk_hscroll.rs"
required-features = ["gtk"]

[[example]]
name = "tui_menu_bar"
path = "examples/tui_menu_bar.rs"
required-features = ["tui"]

[[example]]
name = "gtk_menu_bar"
path = "examples/gtk_menu_bar.rs"
required-features = ["gtk"]

[[example]]
name = "tui_split"
path = "examples/tui_split.rs"
required-features = ["tui"]

[[example]]
name = "gtk_split"
path = "examples/gtk_split.rs"
required-features = ["gtk"]

[[example]]
name = "tui_shell"
path = "examples/tui_shell.rs"
required-features = ["tui"]

[[example]]
name = "gtk_shell"
path = "examples/gtk_shell.rs"
required-features = ["gtk"]

[[example]]
name = "macos_search_panel"
path = "examples/macos_search_panel.rs"
required-features = ["macos"]

[[example]]
name = "macos_sidebar_search"
path = "examples/macos_sidebar_search.rs"
required-features = ["macos"]

[[example]]
name = "macos_menu_bar"
path = "examples/macos_menu_bar.rs"
required-features = ["macos"]

[[example]]
name = "macos_native_menu"
path = "examples/macos_native_menu.rs"
required-features = ["macos"]

[[example]]
name = "macos_right_click_demo"
path = "examples/macos_right_click_demo.rs"
required-features = ["macos"]

[[example]]
name = "macos_hscroll"
path = "examples/macos_hscroll.rs"
required-features = ["macos"]
